[package]
authors = ["Nick Fitzgerald <fitzgen@gmail.com>"]
edition = "2018"
name = "cool-rs"
version = "0.1.0"

[build-dependencies]
glob = "0.2.11"
lalrpop = "0.16.1"

[dependencies]
failure = "0.1.3"
id-arena = "1.0"
lalrpop-util = "0.16.1"
regex = "1.0.6"
structopt = "0.2.13"

[dev-dependencies]
diff = "0.1.11"
